--- a/Index.html
+++ b/Index.html
@@ -26,6 +26,8 @@
 
     <div id="firstbutton" class="button color-white">
     </div>
+    <div id="firstbutton" class="button color-white">
+    </div>
 
     <div id="secondButton" class="button color-black">
     </div>
